fixed API docs :D
